# mysqlclient

./: .gitignore  .readthedocs.yaml  .travis.yml  Dockerfile  HISTORY  HISTORY.md  HISTORY.rst  INSTALL  INSTALL.rst  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  _mysql.c  azure-pipelines.yaml  codecov.yml  file1.txt  metadata.cfg  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_common.py  setup_posix.py  setup_windows.py  site.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
MySQLdb/: .cvsignore  CHANGELOG  CHANGES-1.2.1  ChangeLog  CompatMysqldb.py  HISTORY  MANIFEST.in  PKG-INFO  README  __init__.py  _exceptions.py  _mysql.c  _mysql_exceptions.py  _mysql_version.h  compat.py  connections.py  converters.py  cursors.py  distribute_setup.py  ez_setup.py  metadata.cfg  pymemcompat.h  release.py  setup.cfg  setup.py  setup_common.py  setup_posix.py  setup_windows.py  site.cfg  test_MySQLdb_capabilities.py  test_MySQLdb_dbapi20.py  test_capabilities.py  times.py
ci/: django-requirements.txt  test_mysql.py
doc/: FAQ.rst  Makefile  MySQLdb.constants.rst  MySQLdb.rst  _exceptions.rst  _mysql.rst  _mysql_exceptions.rst  conf.py  index.rst  make.bat  modules.rst  requirements.txt  tiledb.sql.constants.rst  tiledb.sql.rst  user_guide.rst
mysql/: CompatMysqldb.py  MANIFEST.in  MySQL-python.spec  MySQL_doc.py  MySQLdb-FAQ.sgml  MySQLdb.py  MySQLdb.sgml  PKG-INFO  README  README.MySQLmodule  README.windows  Setup.in  ZMySQLDA.patch  _mysqlmodule.c  build.py  license.py  setup.py
samples/: waiter_gevent.py  waiter_meinheld.py
tests/: actions.cnf  capabilities.py  configdb.py  dbapi20.py  default.cnf  test_MySQLdb_capabilities.py  test_MySQLdb_dbapi20.py  test_MySQLdb_nonstandard.py  test_MySQLdb_times.py  travis.cnf  (+4 more)
(+94 files in other folders)
